--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 @import "feat/normalize.scss";
 @import "feat/visually-hidden.scss";
 @import "feat/variables.scss";
+@import "feat/base.scss";
 @import "blocks/header.scss";
 @import "blocks/main.scss";
 @import "blocks/footer.scss";
