--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: rgb(162, 28, 28);
-  height: 100px;
-  width: 100px;
+	background-color: rgba(151, 16, 16, 0.781);
+	height: 100px;
+	width: 100px;
 }
